# vs-long-path-names

consoleapp/: CMakeLists.txt  conanfile.txt  main.cpp
long-name-package/: conanfile.py
long-name-package/include/ThisFolderHasALongName/SomeMiddleFolder/AnotherFolderWithALongName/: maybeusefulheader.hpp
